--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "geopagg"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2021"
 description = "An implementation of the geopagg algorithm for p-value aggregation of sgRNAs across gene groupings"
 license = "MIT"
@@ -18,3 +18,6 @@ itertools = "0.13.0"
 rand = "0.8.5"
 rand_chacha = "0.3.1"
 rayon = "1.10.0"
+
+[profile.release]
+lto = true
