--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ categories = ["science"]
 adjustp = "0.1.6"
 anyhow = "1.0.86"
 approx = "0.5.1"
+bon = "2.1.1"
 derive-new = "0.6.0"
 itertools = "0.13.0"
 rand = "0.8.5"
