--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,5 +4,9 @@ updates:
   - package-ecosystem: "cargo"
     directory: "/"
     schedule:
-      interval: "daily"
+      interval: "weekly"
     versioning-strategy: "auto"
+    groups:
+      ndarray-packages:
+        patterns:
+          - "ndarray*"
